# sku

./: README.md  pyproject.toml
projectsku/myapp/: db.sqlite3  image.csv
projectsku/myapp/image_process/: models.py  tasks.py  urls.py  utils.py  views.py
projectsku/myapp/image_process/migrations/: 0001_initial.py
projectsku/myapp/myapp/: celery.py  settings.py  urls.py
