[tool.poetry]
name = "akc"
version = "0.1.0"
description = "my portfolio"
authors = ["anchit chandra <anchitchandra111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
